src/objects/TR1__Reference__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Areas_for_Improvement__c</fullName>
        <label>Areas for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Hire_Again__c</fullName>
        <label>Hire Again</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Placed</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>References (Referee)</relationshipLabel>
        <relationshipName>References1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Relationship__c</fullName>
        <label>Relationship</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Relationship_with_Peers_Supervisors__c</fullName>
        <label>Relationship with Peers/Supervisors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Suitability_for_Position__c</fullName>
        <label>Suitability for Position</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Technical_Ability__c</fullName>
        <label>Technical Ability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Peer</fullName>
                </value>
                <value>
                    <fullName>Subordinate</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>